<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10sp"
    card_view:cardBackgroundColor="#66cf0de9"
    card_view:cardCornerRadius="4dp">


 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="16dp">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

   <android.support.v7.widget.AppCompatTextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_weight="2"
       android:text="@string/hint_fname"
       android:textColor="#000" />

   <android.support.v7.widget.AppCompatTextView
       android:id="@+id/textViewFName"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_weight="1"
       android:text="@string/hint_fname"
       android:textColor="#000" />
  </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      android:orientation="horizontal">

   <android.support.v7.widget.AppCompatTextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_weight="2"
       android:text="@string/hint_mname"
       android:textColor="#000" />

   <android.support.v7.widget.AppCompatTextView
       android:id="@+id/textViewMName"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_weight="1"
       android:text="@string/hint_mname"
       android:textColor="#000" />
  </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      android:orientation="horizontal">

   <android.support.v7.widget.AppCompatTextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_weight="2"
       android:text="@string/hint_lname"
       android:textColor="#000" />

   <android.support.v7.widget.AppCompatTextView
       android:id="@+id/textViewLName"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_weight="1"
       android:text="@string/hint_lname"
       android:textColor="#000" />
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      android:orientation="horizontal">

   <android.support.v7.widget.AppCompatTextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_weight="2"
       android:text="@string/hint_email"
       android:textColor="#000" />

   <android.support.v7.widget.AppCompatTextView
       android:id="@+id/textViewEmail"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_weight="1"
       android:text="@string/hint_email"
       android:textColor="#040230" />
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      android:orientation="horizontal">

   <android.support.v7.widget.AppCompatTextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_weight="2"
       android:text="@string/hint_password"
       android:textColor="#000" />

   <android.support.v7.widget.AppCompatTextView
       android:id="@+id/textViewPassword"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_weight="1"
       android:text="***********"
       android:textColor="#000000" />
  </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      android:orientation="horizontal">

   <android.support.v7.widget.AppCompatTextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_weight="2"
       android:text="@string/hint_phono"
       android:textColor="#000" />

   <android.support.v7.widget.AppCompatTextView
       android:id="@+id/textViewPhono"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_weight="1"
       android:text="@string/hint_phono"
       android:textColor="#000000" />
  </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      android:orientation="horizontal">

   <android.support.v7.widget.AppCompatTextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_weight="2"
       android:text="@string/hint_faxno"
       android:textColor="#000" />

   <android.support.v7.widget.AppCompatTextView
       android:id="@+id/textViewFaxno"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_weight="1"
       android:text="@string/hint_faxno"
       android:textColor="#000000" />
  </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      android:orientation="horizontal">

   <android.support.v7.widget.AppCompatTextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_weight="2"
       android:text="@string/hint_DoB"
       android:textColor="#000" />

   <android.support.v7.widget.AppCompatTextView
       android:id="@+id/textViewDOB"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_weight="1"
       android:text="@string/hint_DoB"
       android:textColor="#000000" />
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      android:orientation="horizontal">


   <android.support.v7.widget.AppCompatTextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_weight="2"
       android:text="@string/hint_Address"
       android:textColor="#000" />

   <android.support.v7.widget.AppCompatTextView
       android:id="@+id/textViewAddress"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_weight="1"
       android:text="@string/hint_Address"
       android:textColor="#000000" />
  </LinearLayout>


 </LinearLayout>

</android.support.v7.widget.CardView>